--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,8 @@
-spring.application.name=Aluno Online
-
-# Configuracao do Banco de Dados
-spring.datasource.url=jdbc:postgresql://localhost:5432/aluno_online
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:mysql://localhost:3306/alunoonlinemysql?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=root
 spring.datasource.password=1234
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Configuracao do Hibernate (JPA)
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-# Configuracao do Pool de Conexoes (opcional, melhora desempenho)
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.minimum-idle=2
-spring.datasource.hikari.idle-timeout=30000
-spring.datasource.hikari.max-lifetime=1800000
-spring.datasource.hikari.connection-timeout=30000
-
-# Logging SQL (opcional, util para debug)
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
